updated bills list image

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
       <div class="col s12 m12 l4">
         <div class="card medium card-panel hoverable z-depth-5">
           <div class="card-content">
-            <p class="center-align">Bil.ly - URL Shortener <br>Bit.ly Clone</p>
+            <p class="center-align">Bil.ly - URL Shortener & Link Vault <br>Bit.ly Clone</p>
           </div>
           <div class="card-image">
             <img class="materialboxed" src="{% static 'app/images/billy.jpg' %}" alt="" />
@@ -116,10 +116,10 @@
       <div class="modal-footer">
         <div class="row">
           <div class="col m4">
-            <a class="waves-effect waves-light btn modal-trigger z-depth-2" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
+            <a class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="http://www.subasmbly.com" target="blank">Open Subasmbly.com</a>
           </div>
           <div class="col m4">
-            <a class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://github.com/williamjohngardner/bill_of_materials" target="blank">GitHub Repository</a>
+            <a class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="https://github.com/williamjohngardner/bill_of_materials" target="blank">GitHub Repository</a>
           </div>
           <div class="col m4">
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
@@ -159,10 +159,10 @@
       <div class="modal-footer">
         <div class="row">
           <div class="col m4">
-            <a class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billslist.herokuapp.com/" target="blank">Open Bill's List</a>
+            <a class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="https://billslist.herokuapp.com/" target="blank">Open Bill's List</a>
           </div>
           <div class="col m4">
-            <a class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://github.com/williamjohngardner/billslist" target="blank">GitHub Repository</a>
+            <a class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="https://github.com/williamjohngardner/billslist" target="blank">GitHub Repository</a>
           </div>
           <div class="col m4">
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
@@ -201,10 +201,10 @@
       <div class="modal-footer">
         <div class="row">
           <div class="col m4">
-            <a class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open Bil.ly</a>
+            <a class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="https://billdotly.herokuapp.com/" target="blank">Open Bil.ly</a>
           </div>
           <div class="col m4">
-            <a class="waves-effect waves-light btn modal-trigger z-depth-2" href="https://github.com/williamjohngardner/url_shortener" target="blank">GitHub Repository</a>
+            <a class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="https://github.com/williamjohngardner/url_shortener" target="blank">GitHub Repository</a>
           </div>
           <div class="col m4">
             <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
