--- a/templates/index.html
+++ b/templates/index.html
@@ -449,7 +449,7 @@
   <div class="row hide-on-large-only">
     <div class="col s12 m12 center-align">
       <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-1" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
-      <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Click to Download My Resume in .pdf Formatting</a>
+      <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Download My Resume as .pdf</a>
     </div>
   </div>
     <br>
