--- a/app/static/app/css/main.css
+++ b/app/static/app/css/main.css
@@ -25,8 +25,20 @@ h2 {
     height: 450px;
 }
 
+@media screen and (max-width: 960px) {
+  
+}
+
+@media screen and (min-width: 700px) {
+  .card-image-mobile {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .card-image {
     display: none;
   }
+
+
 }
