adding more portfolio items

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
 {% endblock %}
 {% block about %}
 <div class="container">
-  <h2 class="center-align">BILL GARDNER &nbsp <small>BACKEND DEVELOPER</small></h2>
+  <h2 class="center-align">BILL GARDNER &nbsp <small>WEB DEVELOPER</small></h2>
   <hr>
-  <p class="flow-text center-align">I am a recent graduate of The Iron Yard in Greenville, SC, where I studied backend development,  including Python and Django, with the goal of creating elegant and useful web-based tools.   I’m experienced in backend web development, object-oriented and functional programming, and relational database integration.</p>
+  <p class="flow-text center-align">I am a recent graduate of The Iron Yard in Greenville, SC, where I studied web development utilizing Python and Django, with the goal of creating elegant and useful web-based tools.   I’m experienced in backend web development, object-oriented and functional programming, and relational database integration.</p>
   <p class="flow-text center-align">I have previously spent more than 15 years working in
   manufacturing environments as both an engineer and a design manager.  As a result, I have a wealth of knowledge and
   experience creating products in an organized, thoughtful, and cost-effective manner.</p>
