updated resume and statement

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
     <footer class="page-footer blue-grey darken-1">
       <div class="footer-copyright">
         <div class="container">
-          © 2017 Copyright William John Gardner
+          &copy; 2016-<script type="text/javascript"> document.write(new Date().getFullYear());</script> William John Gardner
         </div>
       </div>
     </footer>
