--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,10 @@
 {% endblock %}
 {% block about %}
   <div class="container">
-    <h2 class="center-align">BILL GARDNER &nbsp <small>WEB DEVELOPER</small></h2>
+    <h2 class="center-align">BILL GARDNER &nbsp <small>WEB APPLICATIONS DEVELOPER</small></h2>
     <hr>
-    <p class="flow-text center-align">I am a recent graduate of The Iron Yard in Greenville, SC, where I studied web development utilizing Python and Django, with the goal of creating elegant and useful web-based tools.   I’m experienced in backend web development, object-oriented and functional programming, and relational database integration.</p>
-    <p class="flow-text center-align">I have previously spent more than 15 years working in
-    manufacturing environments as both an engineer and a design manager.  As a result, I have a wealth of knowledge and
-    experience creating products in an organized, thoughtful, and cost-effective manner.</p>
+    <p class="flow-text center-align">As an analytical thinker and a critical and creative problem solver, I am able to call on more than 15 years of engineering and product development experience to solve complex software development questions.</p>
+    <p class="flow-text center-align">I am seeking opportunities that will allow me to contribute my skills to the development of elegant software products as well as allowing my continued growth as a software developer.</p>
     <br>
     <br>
   </div>
