updated skills section

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     <div class="col s12 m12 l4">
       <div class="card medium card-panel hoverable z-depth-5">
         <div class="card-content">
-          <p class="center-align">Madalon Law Firm<br>Corporate Website</p>
+          <p class="center-align">Madalon Law Firm<br>Wordpress Theme Development</p>
         </div>
         <div class="card-image">
           <img id="modalimg" class="materialboxed" src="{% static 'app/images/madalon.jpg' %}" alt="Madalon" />
@@ -427,31 +427,24 @@
       </div>
       <div class="row">
         <div class="col l4 left-align">
-          <h6 class="btn-flat disabled black-text">Java</h6><br>
-          <h6 class="btn-flat disabled black-text">GitHub</h6><br>
+          <h6 class="btn-flat disabled black-text">PHP</h6><br>
           <h6 class="btn-flat disabled black-text">Object Oriented Programming</h6><br>
-          <h6 class="btn-flat disabled black-text">Functional Programming</h6><br>
-          <h6 class="btn-flat disabled black-text">Heroku</h6><br>
-          <h6 class="btn-flat disabled black-text">PostgreSQL</h6><br>
+          <h6 class="btn-flat disabled black-text">Revision Control with Git</h6><br>
+          <h6 class="btn-flat disabled black-text">Adobe Photoshop</h6><br>
         </div>
         <div class="col l4 center-align">
-          <h6 class="btn-flat disabled black-text">Bootstrap</h6><br>
-          <h6 class="btn-flat disabled black-text">Materialize</h6><br>
-          <h6 class="btn-flat disabled black-text">Adobe Photoshop</h6><br>
+          <h6 class="btn-flat disabled black-text">Java</h6><br>
+          <h6 class="btn-flat disabled black-text">Functional Programming</h6><br>
+          <h6 class="btn-flat disabled black-text">Bootstrap/Materialize</h6><br>
           <h6 class="btn-flat disabled black-text">Adobe Illustrator</h6><br>
-          <h6 class="btn-flat disabled black-text">Adobe InDesign</h6><br>
-          <h6 class="btn-flat disabled black-text">Adobe Acrobat</h6><br>
         </div>
         <div class="col l4 right-align">
-          <h6 class="btn-flat disabled black-text">ZSH</h6><br>
-          <h6 class="btn-flat disabled black-text">Sublime Text</h6><br>
-          <h6 class="btn-flat disabled black-text">SolidWorks</h6><br>
-          <h6 class="btn-flat disabled black-text">Rhinoceros 3D</h6><br>
-          <h6 class="btn-flat disabled black-text">AutoCAD</h6><br>
-          <h6 class="btn-flat disabled black-text">Google Sketchup</h6><br>
+          <h6 class="btn-flat disabled black-text">Linux Shell</h6><br>
+          <h6 class="btn-flat disabled black-text">MySQL</h6><br>
+          <h6 class="btn-flat disabled black-text">PostgreSQL</h6><br>
+          <h6 class="btn-flat disabled black-text">Heroku</h6><br>
         </div>
       </div>
-      <br>
       <br>
     </div>
   </div>
