added new modals and updated resumes

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,14 +27,14 @@
   <hr>
   <br>
   <div class="row">
-    <div class="col l2"></div>
+
     <div class="col s12 m12 l4">
       <div class="card medium card-panel hoverable z-depth-5">
         <div class="card-content">
           <p class="center-align">Madalon Law Firm<br>Wordpress Theme Development</p>
         </div>
         <div class="card-image">
-          <img id="modalimg" class="materialboxed" src="{% static 'app/images/madalon.jpg' %}" alt="Madalon" />
+          <img id="modalimg" class="materialboxed" src="{% static 'app/images/madalon.jpg' %}" alt="Madalon Law Firm" />
         </div>
 
         <div class="card-action">
@@ -47,10 +47,25 @@
     <div class="col s12 m12 l4">
       <div class="card medium card-panel hoverable z-depth-5">
         <div class="card-content">
+          <p class="center-align">Ascend Disability Law<br>Corporate Website</p>
+        </div>
+        <div class="card-image">
+          <img id="modalimg" class="materialboxed" src="{% static 'app/images/ascend.jpg' %}" alt="Ascend Disability Law" />
+        </div>
+
+        <div class="card-action">
+          <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger" href="#modal8">More Information</a>
+          <a id="portfoliobutton" class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="http://ascenddisability.com/" target="blank">Open Ascend Disability Law</a>
+        </div>
+      </div>
+    </div>
+    <div class="col s12 m12 l4">
+      <div class="card medium card-panel hoverable z-depth-5">
+        <div class="card-content">
           <p class="center-align">Get Found Now<br>Corporate Website</p>
         </div>
         <div class="card-image">
-          <img id="modalimg" class="materialboxed" src="{% static 'app/images/getfoundnow.jpg' %}" alt="Madalon" />
+          <img id="modalimg" class="materialboxed" src="{% static 'app/images/getfoundnow.jpg' %}" alt="Get Found Now" />
         </div>
 
         <div class="card-action">
@@ -59,7 +74,6 @@
         </div>
       </div>
     </div>
-    <div class="col l2"></div>
   </div>
   <div class="row">
       <div class="col s12 m12 l4">
@@ -336,6 +350,33 @@
         </div>
       </div>
     </div>
+    <!-- Modal Structure 8-->
+    <div id="modal8" class="modal">
+      <div class="modal-content">
+        <h5>AscendDisability.com - Corporate Website</h5>
+        <hr>
+        <p>Ascend Disability Law</p>
+        <hr>
+        <h6>Technologies implemented: </h6>
+        <div class="row">
+          <div class="col m3">
+            <p>Wordpress CMS</p>
+            <p>HTML</p>
+            <p>CSS</p>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <div class="row">
+          <div class="col m4">
+            <a class="waves-effect grey darken-3 btn modal-trigger z-depth-2" href="http://ascenddisability.com/" target="blank">Open Ascend Disability Law</a>
+          </div>
+          <div class="col m4">
+            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Modal Structure 6-->
     <div id="modal6" class="modal">
       <div class="modal-content">
@@ -530,28 +571,28 @@
               <h6 class="btn-flat disabled black-text" width="175px">Java</h6>
               <h6 class="btn-flat disabled black-text" width="175px">Bootstrap</h6>
               <h6 class="btn-flat disabled black-text" width="175px">Photoshop</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">Solidworks</h6>
+
             </div>
             <div class="col m3">
               <h6 class="btn-flat disabled black-text" width="175px">Django</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">Heroku</h6>
+              <h6 class="btn-flat disabled black-text" width="175px">PHP</h6>
               <h6 class="btn-flat disabled black-text" width="175px">Materialize</h6>
               <h6 class="btn-flat disabled black-text" width="175px">Illustrator</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">Rhino3D</h6>
+
             </div>
             <div class="col m3">
               <h6 class="btn-flat disabled black-text" width="175px">HTML5/CSS3</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">Github</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">ZSH</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">In-Design</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">AutoCAD</h6>
+              <h6 class="btn-flat disabled black-text" width="175px">Git</h6>
+              <h6 class="btn-flat disabled black-text" width="175px">Linux Shell</h6>
+              <h6 class="btn-flat disabled black-text" width="175px">Heroku</h6>
+
             </div>
             <div class="col m3">
               <h6 class="btn-flat disabled black-text" width="175px">Wordpress</h6>
               <h6 class="btn-flat disabled black-text" width="175px">RESTful API</h6>
               <h6 class="btn-flat disabled black-text" width="175px">PostgreSQL</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">Acrobat</h6>
-              <h6 class="btn-flat disabled black-text" width="175px">Sketchup</h6>
+              <h6 class="btn-flat disabled black-text" width="175px">MySQL</h6>
+
             </div>
           </div>
         </div>
@@ -580,12 +621,13 @@
         <div class="container">
           <br>
           <ul>
-            <li><h5>Childrens Health Board: <small>Wordpress Website & Hosting Setup</small></h5></li>
-            <li><h5>Sunica.org: <small>Wordpress Website & Hosting Setup</small></h5></li>
-            <li><h5>DC Design House: <small>Wordpress Website, Hosting, Social Media</small></h5></li>
-            <li><h5>American Grilling Club: <small>Wordpress Website & Branding</small></h5></li>
-            <li><h5>FutureCare Maryland: <small>Existing Wordpress Website Maintenance</small></h5></li>
-            <li><h5>Lorenz Consulting LLC: <small>Wordpress Website & Hosting Setup</small></h5></li>
+            <li><h5><a href="https://madalonlaw.com/" target="_blank">Madalon Law Firm:</a> <small>Wordpress Site &amp; Theme Development</small></h5></li>
+            <li><h5><a href="http://getfoundnow.co/" target="_blank">Get Found Now:</a> <small>Wordpress Site Development</small></h5></li>
+            <li><h5><a href="http://ascenddisability.com/" target="_blank">Ascend Disability Law Firm:</a> <small>Wordpress Site Development</small></h5></li>
+            <li><h5><a href="http://thevancelawfirm.com/" target="_blank">Vance Law Firm:</a> <small>Wordpress Site Development</small></h5></li>
+            <li><h5><a href="http://childrenshealthboard.org/" target="_blank">Childrens Health Board:</a> <small>Wordpress Website &amp; Hosting Setup</small></h5></li>
+            <li><h5><a href="http://www.dcdesignhouse.com/" target="_blank">DC Design House:</a> <small>Wordpress Website, Hosting, Social Media</small></h5></li>
+
           </ul>
           <br>
         </div>
@@ -597,8 +639,17 @@
         <div class="container">
           <br>
           <ul>
+            <li><h5>Wordpress Developer, 2016-2017: <small>EverConvert</small></h5></li>
+            <li><h6>Developer of Wordpress based websites to assist EverConvert's effort of providing industry leading SEO services to lawyers and law firms nation-wide.<br>
+                    <br>I am currently developing a custom WP theme framework, utilizing Advanced Custom Fields, to provide the company with the ability to reuse custom themes and create custom sites without needing to re-develop themes or code.<br>
+                    <br>My development efforts leverage Wordpress, PHP, HTML, and CSS, as well as several Wordpress specific Saas products.</h6></li>
+          </ul>
+          <br>
+          <ul>
             <li><h5>Principal, 2011-2016: <small>William John Gardner Design Studio, LLC</small></h5></li>
-            <li><h6>Furniture design and development startup focused on providing high end custom designs to interior designers in the Washington, DC area.</h6></li>
+            <li><h6>WJGDS is the design studio of Bill Gardner, a Washington, D.C. area firm that specializes in custom designer home furnishings specifically aimed at the interior design market.<br>
+                    <br>With a background in industrial design, engineering, and construction, Bill has nearly two decades of experience with the inter-connectivity of materials which is reflected in his heirloom-quality designs. Bill takes pride in supporting talented, U.S-based craftsmen and producing American made furniture for the trade.<br>
+                    <br>Bill has been featured in recognized design blogs and regional design magazines for his work and his contributions to the design industry.</h6></li>
           </ul>
           <br>
           <ul>
