changing responsiveness of titles

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <title>Bill Gardner | Web Developer</title>
+      <title>Bill Gardner | Web Applications Developer</title>
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
@@ -26,7 +26,7 @@
 <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper white z-depth-3">
-      <a id="logo" href="/" class="brand-logo blue-grey-text text-darken-1-text flow-text hide-on-small-only">Bill Gardner  |  <small>Web Developer</small></a>
+      <a id="logo" href="/" class="brand-logo blue-grey-text text-darken-1-text flow-text hide-on-small-only">Bill Gardner  |  <small>Web Applications Developer</small></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons blue-grey darken-1">menu</i></a>
         <ul id="buttons" class="right hide-on-med-and-down">
           <li><a id="btn" class="waves-effect grey darken-3 btn z-depth-2" href="http://www.williamjohngardner.com/blog">Blog</a></li>
