--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 {% endblock %}
 {% block about %}
   <div class="container">
-    <h2 class="center-align">BILL GARDNER &nbsp <small>WEB APPLICATIONS DEVELOPER</small></h2>
+    <h2 class="center-align hide-on-med-and-down">BILL GARDNER &nbsp<small>WEB APPLICATIONS DEVELOPER</small></h2>
+    <h2 class="center-align hide-on-large-only">BILL GARDNER<br><small>WEB APPLICATIONS DEVELOPER</small></h2>
     <hr>
     <p class="flow-text center-align">As an analytical thinker and a critical and creative problem solver, I am able to call on more than 15 years of engineering and product development experience to solve complex software development questions.</p>
     <p class="flow-text center-align">I am seeking opportunities that will allow me to contribute my skills to the development of elegant software products as well as allowing my continued growth as a software developer.</p>
