--- a/templates/index.html
+++ b/templates/index.html
@@ -521,28 +521,22 @@
       </div>
       <div class="row">
         <div class="col s12 m12 center-align">
-          <h6 class="btn-flat disabled black-text">Java</h6><br>
-          <h6 class="btn-flat disabled black-text">GitHub</h6><br>
+          <h6 class="btn-flat disabled black-text">PHP</h6><br>
           <h6 class="btn-flat disabled black-text">Object Oriented Programming</h6><br>
-          <h6 class="btn-flat disabled black-text">Functional Programming</h6><br>
-          <h6 class="btn-flat disabled black-text">Heroku</h6><br>
-          <h6 class="btn-flat disabled black-text">PostgreSQL</h6><br>
-        </div>
-        <div class="col s12 m12 center-align">
-          <h6 class="btn-flat disabled black-text">Bootstrap</h6><br>
-          <h6 class="btn-flat disabled black-text">Materialize</h6><br>
+          <h6 class="btn-flat disabled black-text">Revision Control with Git</h6><br>
           <h6 class="btn-flat disabled black-text">Adobe Photoshop</h6><br>
-          <h6 class="btn-flat disabled black-text">Adobe Illustrator</h6><br>
-          <h6 class="btn-flat disabled black-text">Adobe InDesign</h6><br>
-          <h6 class="btn-flat disabled black-text">Adobe Acrobat</h6><br>
         </div>
         <div class="col s12 m12 center-align">
-          <h6 class="btn-flat disabled black-text">ZSH</h6><br>
-          <h6 class="btn-flat disabled black-text">Sublime Text</h6><br>
-          <h6 class="btn-flat disabled black-text">SolidWorks</h6><br>
-          <h6 class="btn-flat disabled black-text">Rhinoceros 3D</h6><br>
-          <h6 class="btn-flat disabled black-text">AutoCAD</h6><br>
-          <h6 class="btn-flat disabled black-text">Google Sketchup</h6><br>
+          <h6 class="btn-flat disabled black-text">Java</h6><br>
+          <h6 class="btn-flat disabled black-text">Functional Programming</h6><br>
+          <h6 class="btn-flat disabled black-text">Bootstrap/Materialize</h6><br>
+          <h6 class="btn-flat disabled black-text">Adobe Illustrator</h6><br>
+        </div>
+        <div class="col s12 m12 center-align">
+          <h6 class="btn-flat disabled black-text">Linux Shell</h6><br>
+          <h6 class="btn-flat disabled black-text">MySQL</h6><br>
+          <h6 class="btn-flat disabled black-text">PostgreSQL</h6><br>
+          <h6 class="btn-flat disabled black-text">Heroku</h6><br>
         </div>
       </div>
       <br>
