modal card image troubleshooting

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block introcontent %}
   <div id="about">
     <img src="{% static 'app/images/gears.jpg' %}" class="z-depth-3 hide-on-med-and-down" alt="Bill Gardner"></img>
-    <img src="{% static 'app/images/gears_md.jpg' %}" class="z-depth-3 hide-on-large-only" alt="Bill Gardner"></img>
+    <img src="{% static 'app/images/gears_md.jpg' %}" id="header-image-med" class="z-depth-3 hide-on-large-only" alt="Bill Gardner"></img>
   </div>
 {% endblock %}
 {% block about %}
