--- a/app/static/app/css/main.css
+++ b/app/static/app/css/main.css
@@ -31,13 +31,13 @@ h2 {
 
 @media screen and (min-width: 700px) {
   .card-image-mobile {
-    display: none;
+    /*display: none;*/
   }
 }
 
 @media screen and (max-width: 700px) {
   .card-image {
-    display: none;
+    /*display: none;*/
   }
 
 
