--- a/app/static/app/css/main.css
+++ b/app/static/app/css/main.css
@@ -25,19 +25,24 @@ h2 {
     height: 450px;
 }
 
+.card-image-mobile img {
+  width: 337px;
+
+}
+
 @media screen and (max-width: 960px) {
 
 }
 
 @media screen and (min-width: 700px) {
   .card-image-mobile {
-    /*display: none;*/
+    display: none;
   }
 }
 
 @media screen and (max-width: 700px) {
-  .card-image {
-    /*display: none;*/
+  #headshot-dsktop {
+    display: none;
   }
 
 
