--- a/templates/index.html
+++ b/templates/index.html
@@ -692,7 +692,7 @@
       <img src="{% static 'app/images/headshot.jpg' %}" width="347px" height="438px" alt="Bill Gardner Headshot" />
     </div>
     <div class="card horizontal blue-grey darken-1 z-depth-4">
-      <div class="card-image">
+      <div class="card-image" id="headshot-dsktop">
         <img src="{% static 'app/images/headshot.jpg' %}" width="290px" height="366px" alt="Bill Gardner Headshot" />
       </div>
       <div class="card-stacked">
