--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,14 @@
 {% endblock %}
 {% block about %}
   <div class="container">
+    <br>
+    <br>
     <h2 class="center-align hide-on-med-and-down">BILL GARDNER &nbsp<small>WEB APPLICATIONS DEVELOPER</small></h2>
     <h2 class="center-align hide-on-large-only">BILL GARDNER<br><small>WEB APPLICATIONS DEVELOPER</small></h2>
     <hr>
     <p class="flow-text center-align">As an analytical thinker and a critical and creative problem solver, I am able to call on more than 15 years of engineering and product development experience to solve complex software development questions.</p>
-    <p class="flow-text center-align">I am seeking opportunities that will allow me to contribute my skills to the development of elegant software products as well as allowing my continued growth as a software developer.</p>
+    <br>
+    <br>
     <br>
     <br>
   </div>
@@ -662,8 +665,8 @@
   </div>
   <div class="row hide-on-large-only">
     <div class="col s12 m12 center-align">
-      <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-1" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
-      <a id="resumebtn" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Download My Resume as .pdf</a>
+      <a id="resumebtn_mobile" class="waves-effect grey darken-3 btn-large z-depth-1" href="{% static 'app/images/gardner_resume.pdf' %}" target="blank">Click to View My Resume</a>
+      <a id="resumebtn_mobile" class="waves-effect grey darken-3 btn-large z-depth-3" href="{% static 'app/images/gardner_resume.pdf' %}" download>Download My Resume as .pdf</a>
     </div>
   </div>
     <br>
